5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1559.log
== TEST (2019-03-29 00:46:15) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia."
print(frase.ipper())
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia."
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:46:20) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia."
print(frase.ipper
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia."
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:46:35) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia."
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:46:44) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia."
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:47:17) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 00:47:19) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.134215
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:12:26) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.187491
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:28:39) 
-- CODE:
# Variavel
frase = "Ada Lovelace foi a primeira programadora da historia."
# Saida
print(frase.upper())
-- EXECUTION TIME:
0.200957
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
